<resources>
    <string name="app_name" translatable="false">Parky</string>
    <string name="server_preference_url" translatable="false">http://192.168.1.74:9090</string>
    <string name="title_activity_onboarding">OnBoarding</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">Save your parking spot</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="grant">Grant</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="info">Information</string>
    <string name="any">Any</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="double_zero">00</string>
    <string name="menu_home">Home</string>
    <string name="menu_add_parking">Add Parking</string>
    <string name="menu_user_location">User Location</string>
    <string name="menu_settings">Settings</string>
    <string name="take_photo">Take photo</string>
    <string name="schedule_alarm">Schedule alarm</string>
    <string name="change_map_type">Change map type</string>
    <string name="finish_parking">Finish Parking</string>
    <string name="refresh_location">Refresh Location</string>
    <string name="camera_permission_rationale">Camera permission is required so that a picture of your car parking gets taken.</string>
    <string name="camera_permission_title">Camera permission required</string>
    <string name="camera_permission_denied">Required camera permission was not granted.</string>
    <string name="contact_permission_rationale">TBD</string>
    <string name="microphone_permission_rationale">TBD</string>
    <string name="phone_permission_rationale">TBD</string>
    <string name="storage_permission_rationale">TBD</string>
    <string name="location_permission_title">Location permission required</string>
    <string name="location_permission_rationale">To detect your parking location, the app needs that the location is enabled.</string>
    <string name="location_background_permission_title">Background location required</string>
    <string name="location_background_permission_rationale">To detect your parking location, the app needs that the location is set to <b>Allow all the time.</b></string>
    <string name="location_permission_denied">Location permission was not granted.</string>
    <string name="parking_spots">Parking Spots</string>
    <string name="parking_type_street">Street-Parking</string>
    <string name="parking_type_lot">Parking Lot</string>
    <string name="parking_floor_type_lobby">Lobby</string>
    <string name="parking_floor_type_floor">Floor</string>
    <string name="parking_floor_type_roof">Roof</string>
    <string name="parking_floor_type_basement">Basement</string>
    <string name="invalid_address_message">Enter a valid address</string>
    <string name="invalid_location_message">The location received is not a valid one. Please refresh the location manually.</string>
    <string name="invalid_parking_time_message">Enter a valid time</string>
    <string name="invalid_parking_type_message">Enter a valid parking type</string>
    <string name="invalid_floor_type_message">Enter a valid floor type</string>
    <string name="invalid_floor_number_message">Enter a valid floor number</string>
    <string name="invalid_color_message">Enter a valid color</string>
    <string name="invalid_lot_identifier_message">Enter a valid lot identifier</string>
    <string name="invalid_hour_rate_message">Enter a valid hour rate</string>
    <string name="save_parking_lot">Save parking lot</string>
    <string name="update_parking_lot">Update parking lot</string>
    <string name="location_information">Location Information</string>
    <string name="address">Address</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="parking_time">Parking Time</string>
    <string name="parking_alarm_time">Alarm Time</string>
    <string name="parking_type">Parking Type</string>
    <string name="parking_lot_information">Parking Lot Information</string>
    <string name="floor_type">Floor Type</string>
    <string name="floor_number">Floor Number</string>
    <string name="color">Color</string>
    <string name="lot_identifier">Lot Identifier</string>
    <string name="hour_rate">Hour Rate</string>
    <string name="map_view">Map View</string>
    <string name="car_picture">Car Picture</string>
    <string name="parking_spot_saved_successfully">Parking spot has been saved successfully!</string>
    <string name="parking_spot_updated_successfully">Parking spot has been updated successfully!</string>
    <string name="alarm_not_set">Alarm was not set</string>
    <string name="add_parking_car_found_message">You have found your car. Would you like to finish this parking spot?</string>
    <string name="yellow">Yellow</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="brown">Brown</string>
    <string name="grey">Grey</string>
    <string name="pink">Pink</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="purple">Purple</string>
    <string name="auto_detection_title">Auto-Parking Detection</string>
    <string name="auto_detection_summary">Detects when you park your car by using Bluetooth</string>
    <string name="background_location_title">Background Location</string>
    <string name="background_location_summary">Use background location to find your car</string>
    <string name="bluetooth_device_title">Bluetooth Device</string>
    <string name="current_theme_title">Theme</string>
    <string name="current_theme_summary">Choose a theme for the app</string>
    <string name="dark_mode_summary">Enables dark mode</string>
    <string name="dark_mode_title">Dark Mode</string>
    <string name="exclusion_zone_title">Exclusion Zone</string>
    <string name="exclusion_zone_summary">Add exclusion zones to avoid adding parking spots in your most frequent spaces</string>
    <string name="favorite_parking_title">Favorite Parking Type</string>
    <string name="default_theme">Theme_Parky</string>
    <string name="app_language_title">Language</string>
    <string name="app_language_summary">Choose the app language to be displayed</string>
    <string name="clean_up_spot_title">Delete Archived Spots</string>
    <string name="clean_up_spot_summary">Remove archived parking spots after %d days</string>
    <string-array name="theme_names">
        <item>Default</item>
        <item>Cherry Forest</item>
        <item>Sunset</item>
        <item>Grapes</item>
    </string-array>
    <string-array name="language_names">
        <item>English</item>
        <item>Spanish</item>
    </string-array>
    <string-array name="language_values">
        <item>@string/english_language</item>
        <item>@string/spanish_language</item>
    </string-array>
    <string-array name="clean_up_names">
        <item>15 days</item>
        <item>30 days</item>
        <item>45 days</item>
        <item>60 days</item>
        <item>90 days</item>
    </string-array>
    <string-array name="clean_up_values">
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>90</item>
    </string-array>
    <string name="loading">Loading…</string>
    <string name="parking_empty_state_message">No parking spots around here…</string>
    <string name="parking_spot_delete_title">Are you sure you want to delete this parking spot?</string>
    <string name="parking_spot_deleted_successful_message">Parking spot deleted successfully!</string>
    <string name="parking_spot_archived_successfully">Your parking has been archived successfully.</string>
    <string name="parking_spot_finish">Are you sure that you want to finish this parking spot and archive it?</string>
    <string name="alarm_dialog_title">Alarm</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="map_type_title">Map Type</string>
    <string name="map_none">None</string>
    <string name="map_normal">Normal</string>
    <string name="map_satellite">Satellite</string>
    <string name="map_terrain">Terrain</string>
    <string name="map_hybrid">Hybrid</string>
    <string name="map_type_summary">Choose the type of map you want to be displayed</string>
    <string name="my_car">My Car</string>
    <string name="hour_rate_disclaimer">* Please note that the hour rate calculated is just an estimation and should not be considered as exact under any circumstances.</string>
    <string name="total">Total</string>
    <string name="alarm_notification_title">Reminder alarm</string>
    <string name="alarm_notification_message">Remember to pick up your car.</string>
    <string name="bluetooth_notification_title">Bluetooth service running</string>
    <string name="bluetooth_notification_message">We will make sure to save your parking spot next time you disconnect from your car.</string>
    <string name="auto_parking_spot_notification_title">Parking spot saved</string>
    <string name="auto_parking_spot_notification_message">Your parking spot has been saved automatically.</string>
    <string name="auto_parking_missing_data_notification_title">Parking spot missing data</string>
    <string name="auto_parking_missing_data_notification_message">Your parking spot is missing some parameters. Tap here to complete it.</string>
    <string name="auto_parking_requires_user_interaction_title">User actions required</string>
    <string name="auto_parking_requires_user_interaction_message">Inaccurate location was received. Please save the parking spot manually by tapping this notification.</string>
    <string name="auto_archived_parking_spot_title">Parking spot archived</string>
    <string name="auto_archived_parking_spot_message">We have detected that have found your car. The parking spot was archived and the bluetooth service has stopped.</string>
    <string name="exclusion_zones_title">Exclusion Zones</string>
    <string name="exclusion_zone_name_hint">Exclusion Zone Name</string>
    <string name="exclusion_zones_subtitle">You can add exclusion zones to prevent saving parking spots automatically when there is a bluetooth disconnection on your most frequent places.</string>
    <string name="exclusion_zones_header">Exclusion Zones Added</string>
    <string name="exclusion_zone_invalid_name">Enter a valid name of at least 4 characters.</string>
    <string name="exclusion_zone_saved_successfully">Exclusion zone saved successfully!</string>
    <string name="no_exclusion_zones_added">No exclusion zones added</string>
    <string name="exclusion_zone_deleted_successfully">Exclusion zone deleted successfully.</string>
    <string name="exclusion_zone_default_radius_label">Radius: 10m</string>
    <string name="onboarding_welcome_title">Welcome to Parky!</string>
    <string name="onboarding_welcome_description">Your best friend to remember your parking spot</string>
    <string name="onboarding_auto_detection_title">Auto-Detection</string>
    <string name="onboarding_auto_detection_description">Forget about saving your parking spot manually. Parky will do it for you by using bluetooth.</string>
    <string name="onboarding_reminder_title">Set reminders</string>
    <string name="onboarding_reminder_description">You can schedule a reminder to pick up your car at any time.</string>
</resources>