<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_take_photo"
        android:icon="@drawable/ic_photo"
        android:orderInCategory="100"
        android:title="@string/take_photo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_schedule_alarm"
        android:icon="@drawable/ic_alarm"
        android:orderInCategory="101"
        android:title="@string/schedule_alarm"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_refresh_location"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="102"
        android:title="@string/refresh_location"
        app:showAsAction="always" />
</menu>