<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exclusion_zones_subtitle"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/action_add_exclusion_zone"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add"
        android:textColor="@color/primary_contrast"
        app:icon="@drawable/ic_add"
        app:iconGravity="end"
        app:iconTint="@color/primary_contrast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle"
        app:rippleColor="@color/color_medium_primary_contrast" />

    <androidx.cardview.widget.CardView
        android:id="@+id/exclusion_zones_list_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@+id/action_add_exclusion_zone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/exclusion_zone_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:padding="6dp"
                android:text="@string/exclusion_zones_header"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                android:textColor="@color/md_white_1000"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/exclusion_zone_empty_state_message"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:gravity="center"
                android:text="@string/no_exclusion_zones_added"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/exclusion_zone_header" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/exclusion_zones_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/exclusion_zone_header"
                tools:itemCount="1"
                tools:listitem="@layout/item_exclusion_zone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@+id/exclusion_zones_list_card">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/exclusion_map_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:padding="6dp"
                android:text="@string/map_view"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                android:textColor="@color/md_white_1000"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/exclusion_zones_map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="h, 14:9"
                app:layout_constraintTop_toBottomOf="@+id/exclusion_map_header" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>