<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/card_background"
    app:cardCornerRadius="20dp"
    app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <View
            android:id="@+id/alert_touchable"
            android:layout_width="30dp"
            android:layout_height="6dp"
            android:background="@color/md_grey_300"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/alert_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_success"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alert_touchable" />

        <TextView
            android:id="@+id/alert_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/success"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/grey_text_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alert_icon" />

        <TextView
            android:id="@+id/alert_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alert_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/alert_positive_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/md_green_600"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/accept"
            android:textColor="@color/primary_button_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alert_message"
            app:rippleColor="@color/md_green_900" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/alert_negative_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/md_grey_200"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/cancel"
            android:textColor="@color/md_grey_700"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alert_positive_button"
            app:rippleColor="@color/md_grey_600" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>